update: updated banner img

--- a/productListing/products.html
+++ b/productListing/products.html
@@ -56,7 +56,7 @@
 
     <section>
         <div class="product_banner flex">
-            <img src="../assets/product_banner_img.png" alt="" class="banner_img">
+            <img src="../assets/banner_img_2.png" alt="" class="banner_img">
             <div class="flex_50 text_center">
                 <p class="banner_heading text_center cursive color_primary">Summers Special</p>
                 <p class="inline">EVERYTHING WITH CODE</p>
