fix: fixed nav links

--- a/productListing/products.html
+++ b/productListing/products.html
@@ -49,8 +49,8 @@
             <a href="#">ABOUT</a>
             <a href="productListing/products.html">SHOP</a>
             <a href="productListing/products.html">PRODUCT</a>
-            <a href="wishlist/wishlist.html">WISHLIST</a>
-            <a href="cartManagement/cart.html">ORDER</a>
+            <a href="../wishlist/wishlist.html">WISHLIST</a>
+            <a href="../cartManagement/cart.html">ORDER</a>
         </div>
     </nav>
 
