update: added links on home page cards

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 
     <header>
         <div class="grid-container">
-            <img class="right_full" src="./assets/first_new.png" alt="">
-            <img class="left_top" src="./assets/left_top_new.png" alt="">
-            <img class="left_bottom" src="./assets/left_bottom_new.png" alt="">
+            <a href="./productListing/products.html" class="right_full"><img src="./assets/first_new.png" alt=""></a>
+            <a href="./productListing/products.html" class="left_top"><img src="./assets/left_top_new.png" alt=""></a>
+            <a href="./productListing/products.html" class="left_bottom"><img class="left_bottom"
+                    src="./assets/left_bottom_new.png" alt=""></a>
         </div>
     </header>
 
@@ -74,83 +75,107 @@
             </div>
 
             <div class="show_products flex space_btw">
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <img src="./assets/product_1.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <img src="./assets/product_1.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Girlish Papery</p>
+                        <p class="p_price bold">$15.75</p>
                     </div>
-                    <p class="p_name margin_sm">Girlish Papery</p>
-                    <p class="p_price bold">$15.75</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <img src="./assets/product_2.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <img src="./assets/product_2.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Elegence Papery</p>
+                        <p class="p_price bold">$21.50</p>
                     </div>
-                    <p class="p_name margin_sm">Elegence Papery</p>
-                    <p class="p_price bold">$21.50</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <div class="badge bg_danger_color hot_product">hot</div>
-                        <img src="./assets/product_3.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <div class="badge bg_danger_color hot_product">hot</div>
+                            <img src="./assets/product_3.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Love Papery</p>
+                        <p class="p_price bold">$10.25</p>
                     </div>
-                    <p class="p_name margin_sm">Love Papery</p>
-                    <p class="p_price bold">$10.25</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <div class="badge bg_light_primary_color discount_product">-27%</div>
-                        <img src="./assets/product_4.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <div class="badge bg_light_primary_color discount_product">-27%</div>
+                            <img src="./assets/product_4.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">The Baker Papery</p>
+                        <p class="p_discount_price grey_text strike bold">$20.15</p><span
+                            class="danger_color bold">$11.75</span>
                     </div>
-                    <p class="p_name margin_sm">The Baker Papery</p>
-                    <p class="p_discount_price grey_text strike bold">$20.15</p><span
-                        class="danger_color bold">$11.75</span>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <img src="./assets/product_5.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <img src="./assets/product_5.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Pinkish Papery</p>
+                        <p class="p_price bold">$18.75</p>
                     </div>
-                    <p class="p_name margin_sm">Pinkish Papery</p>
-                    <p class="p_price bold">$18.75</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <div class="badge bg_danger_color hot_product">hot</div>
-                        <img src="./assets/product_6.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <div class="badge bg_danger_color hot_product">hot</div>
+                            <img src="./assets/product_6.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Butterfly Papery</p>
+                        <p class="p_price bold">$9.75</p>
                     </div>
-                    <p class="p_name margin_sm">Butterfly Papery</p>
-                    <p class="p_price bold">$9.75</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <img src="./assets/product_7.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <img src="./assets/product_7.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Smallish Gratitude Papery</p>
+                        <p class="p_price bold">$5.75</p>
                     </div>
-                    <p class="p_name margin_sm">Smallish Gratitude Papery</p>
-                    <p class="p_price bold">$5.75</p>
-                </div>
+                </a>
 
-                <div class="product text_center pointer">
-                    <div class="product_img relative">
-                        <div class="badge bg_danger_color">hot</div>
-                        <div class="badge outStock_product"><i class="fa-regular fa-face-frown"></i></div>
-                        <img src="./assets/product_8.png" alt="">
-                        <i class="product_heart light_primary_color fa-regular fa-heart"></i>
+                <a href="./singleProduct/singleProduct.html">
+                    <div class="product text_center pointer">
+                        <div class="product_img relative">
+                            <div class="badge bg_danger_color">hot</div>
+                            <div class="badge outStock_product"><i class="fa-regular fa-face-frown"></i></div>
+                            <img src="./assets/product_8.png" alt="">
+                            <a href="./wishlist/wishlist.html"><i
+                                    class="product_heart light_primary_color fa-regular fa-heart"></i></a>
+                        </div>
+                        <p class="p_name margin_sm">Peach Nature Papery</p>
+                        <p class="p_price bold">$15.75</p>
                     </div>
-                    <p class="p_name margin_sm">Peach Nature Papery</p>
-                    <p class="p_price bold">$15.75</p>
-                </div>
+                </a>
             </div>
 
             <div class="more text_center mr_3 pointer"><i class="mr_sm fa-solid fa-plus"></i>Load More</div>
