update: fixed nav links

--- a/productListing/products.html
+++ b/productListing/products.html
@@ -37,18 +37,18 @@
                 <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
             </div>
             <div class="nav_md_left flex align_center">
-                <a href="./authentication/logout.html"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-                <a href="./authentication/signup.html"><i class="fa-regular fa-user"></i></a>
+                <a href="../authentication/logout.html"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+                <a href="../authentication/signup.html"><i class="fa-regular fa-user"></i></a>
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a href="./wishlist/wishlist.html"><i class="fa-regular fa-heart"></i></a>
-                <a href="./cartManagement/cart.html"><i class="fa-brands fa-opencart"></i></a>
+                <a href="../wishlist/wishlist.html"><i class="fa-regular fa-heart"></i></a>
+                <a href="../cartManagement/cart.html"><i class="fa-brands fa-opencart"></i></a>
             </div>
         </div>
         <div class="nav_btm flex space_btw">
             <a href="../index.html">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="productListing/products.html">SHOP</a>
-            <a href="productListing/products.html">PRODUCT</a>
+            <a href="../productListing/products.html">SHOP</a>
+            <a href="../productListing/products.html">PRODUCT</a>
             <a href="../wishlist/wishlist.html">WISHLIST</a>
             <a href="../cartManagement/cart.html">ORDER</a>
         </div>
