--- a/singleProduct/singleProduct.html
+++ b/singleProduct/singleProduct.html
@@ -27,8 +27,8 @@
                 <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
             </div>
             <div class="nav_md_left flex align_center">
-                <a href="logout.html"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-                <a href="login.html"><i class="fa-regular fa-user"></i></a>
+                <a href="../authentication/logout.html"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+                <a href="../authentication/login.html"><i class="fa-regular fa-user"></i></a>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <a href="../wishlist/wishlist.html"><i class="fa-regular fa-heart"></i></a>
                 <a href="../cartManagement/cart.html"><i class="fa-brands fa-opencart"></i></a>
